modify PostgreExecutor